<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.university.moltaka.Login.MainActivity"
    android:background="@drawable/mu">


    <!-- username -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/username_et"
        android:layout_gravity="center_horizontal"
       android:textSize="16dp"
        android:hint="@string/id"
        android:padding="5dp"
        android:background="@color/gray"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="135dp" />

    <!-- password -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:id="@+id/pw_et"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"
        android:textSize="16dp"
        android:padding="5dp"
        android:hint="@string/pass"
        android:layout_below="@+id/username_et"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- new user -->
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_user_cb"
        android:text="@string/new_user"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:padding="9dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#9f08479d"
        android:layout_below="@+id/pw_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/gray" />

    <!-- Login -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:background="#ff51a157"
        android:layout_below="@+id/new_user_cb"
        android:layout_alignLeft="@+id/new_user_cb"
        android:layout_alignStart="@+id/new_user_cb"
        android:layout_alignRight="@+id/new_user_cb"
        android:layout_alignEnd="@+id/new_user_cb" />


</RelativeLayout>
